Update for Grad School

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%PACKAGES AND CONFIGURATIONS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[11pt]{res} % Use the res.cls style, the font size can be changed to 11pt or 12pt here
 
@@ -25,7 +25,7 @@
 \usepackage{fancyhdr}
 \usepackage{lastpage}
 \pagestyle{fancy}
-\cfoot{Page \thepage \hspace{1pt} of 2}
+\cfoot{Page \thepage \hspace{1pt} of 3}
 \rfoot{\today}
 \lfoot{Curriculum Vitae}
 \renewcommand{\headrulewidth}{0pt}
@@ -36,12 +36,9 @@
 
 \begin{document}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	YOUR NAME AND ADDRESS(ES) SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \pagestyle{fancy}
-% \fancyhf{}
-%\centerline{\bf \large CURRICULUM VITAE}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%NAME AND ADDRESS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \centerline{\bf \huge CHETAN CHAWLA}
 \vspace{-0.3cm}
@@ -57,70 +54,74 @@ Phone: (+91) 90133 07073 \\  \noindent\rule{8.5cm}{0.8pt}}
 
 \begin{resume}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	Current Position Section
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%POSITIONS AND EXPERIENCE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \vspace{-0.2cm}
 \section{POSITIONS}
 \vspace{\titlegap}
 
 
 {\bf \href{https://events.asiaa.sinica.edu.tw/ssp/2021/}{\textcolor{blue}{Academia Sinica Institute of Astronomy and Astrophysics}},} Taipei, Taiwan (Remote)\\
-Incoming Summer Research Intern, Jul'21 -- Aug'21
+Research Intern, Jul'21 -- Present \hfill Supervisor: \href{https://alexteachey.wordpress.com/}{\textcolor{blue}{Dr. Alex Teachey}}, Distinguished Postdoc Fellow
 \begin{itemize}
- \item I will be working under the supervision of \href{https://alexteachey.wordpress.com/}{\textcolor{blue}{Dr. Alex Teachey}} on Identifying Temperate Planet Candidates in the TESS Continuous Viewing Zone data
+ \item Working on detection pipeline for temperate exoplanet candidates using \textit{a priori} grid based kernels for detrending and transit searches on Transiting Exoplanet Survey Satellite's (TESS) Continuous Viewing Zones data. Test case recovery of 18/20 Kepler and 17/20 TESS planets with orbital periods ranging from 0.4 to 332 days
+ 
 \end{itemize}
 
 \vspace{-0.1cm}
 {\bf \href{https://www.zs.com/}{\textcolor{blue}{ZS Associates}},} New Delhi, India\\
-Business Technology Analyst, Jun'19 -- Jan'21
+Business Technology Analyst, Jun'19 -- Jan'21 \hfill Incentive Compensation Team: Data Analysis
 \begin{itemize}
-    \item Development, Testing \& Deployment of 1-click end-to-end systems for sales alignment of US-based medical representatives using SQL \& Unix scripting, and analysis using Tableau
-    \item Automated several high-impact reporting modules like Textual insights generation, Data Pull \& Business Rule Implementations, and Backup-Deletion systems
+    \item Development, Testing \& Deployment of 1-click end-to-end systems for sales alignment of US-based medical representatives using SQL, Unix and python scripting, and Tableau dashboards
+    \item Automated several high-impact modules like textual insights generation, data inflow, migration \& processing, and automatic backup-deletion
 \end{itemize}
 
 \vspace{-0.1cm}
-{\bf Indian Insitute of Technology, Delhi, India} - Electrical \& Electronics Dept\\
-Research Intern, Jun'18 – Aug'18 \hfill Mentor: \href{https://web.iitd.ac.in/~brejesh/}{Dr.Brejesh Lall} (Head, EE Dept, IIT-D)
+{\bf \href{https://home.iitd.ac.in/}{\textcolor{blue}{Indian Insitute of Technology, Delhi, India}}} - Electrical \& Electronics Dept\\
+Research Intern, Jun'18 – Aug'18 \hfill Mentor: \href{https://web.iitd.ac.in/~brejesh/index.html}{\textcolor{blue}{Prof. Brejesh Lall}} (Electrical \& Electronics Dept)
 \begin{itemize}
-    \item Research and development of pedestrian trajectory prediction methodologies and optimization of multi-object tracking algorithms for dynamic vehicle-dashboard cameras
-    \item Creating and benchmarking an Indian road detection and tracking dataset (over 50,000 annotated frames containing 7 classes and occlusion information). \textcolor{blue}{\href{https://drive.google.com/file/d/1VzW1S9UInuxXegAi2ursUIjQHOWDsS6R/view?usp=sharing}{Report Link}}
+    \item Worked on pedestrian trajectory prediction, optimizing multi-object tracking, and benchmarking indigenous Indian road dataset with $>$50,000 frames for vehicle-dashboard cameras \textcolor{blue}{\href{https://drive.google.com/file/d/1VzW1S9UInuxXegAi2ursUIjQHOWDsS6R/view?usp=sharing}{[Report]}}
 \end{itemize} 
 
 \vspace{-0.1cm}
 \href{https://www.marconisociety.org/programs-services/}{\textbf{\textcolor{blue}{Celestini Project India}}}, Marconi Society \& IIT Delhi, India\\
-Summer Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github.io/achowdhery-website/index.html}{Dr.A Chowdhery} (Google Brain, Tensorflow)
+Summer Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github.io/achowdhery-website/index.html}{\textcolor{blue}{Dr.Aakanksha Chowdhery}} (Google Brain, Princeton)
 \begin{itemize}
-\item Prototyping and creating test-bed for a low latency collaborative driver assistance system to prevent on-road collisions using real-time networking of sensory data from vehicles. \textcolor{blue}{\href{https://bhartischool.iitd.ac.in/pdf/7thISSUEnewsletter.pdf}{Link (Pg4)}}
+\item Prototyped test-bed for a low latency collaborative driver assistance system to prevent vehicle-to-vehicle and vehicle-to-pedestrian collisions using real-time networking of sensory data. \textcolor{blue}{\href{https://bhartischool.iitd.ac.in/pdf/7thISSUEnewsletter.pdf}{[Link]}}
 \end{itemize}
 
 
 \vspace{\sectgap}
 \hline
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	EDUCATION SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%EDUCATION
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{EDUCATION} %\centerline centers
 
 \vspace{\titlegap}
 
 {\bf Bachelor of Technology, Electronics and Communication Engineering} \hfill Aug'15 -- May'19 \\ 
 \href{http://www.ipu.ac.in/}{\textcolor{blue}{Guru Gobind Singh Indraprastha University}}, \href{http://bvcoend.ac.in}{\textcolor{blue}{Bharati Vidyapeeth's College Of Engg., New Delhi}}\\
-Notable Coursework: Applied Physics (I \& II), Applied Mathematics (I, II, III, \& IV), Electromagnetic Field Theory, Signals and Systems, Digital Signal Processing, Optoelectronics and Optical Communication, Antenna and Wave Propagation, Microwave Engineering, Satellite Communication \\
-\textbf{CGPA}: 8.94 out of 10 (Silver Medalist) \hspace{0.2in}
+\textbf{Notable Coursework}: Applied Physics (I \& II), Applied Mathematics (I, II, III, \& IV), Electromagnetic Field Theory, Signals and Systems, Digital Signal Processing, Optoelectronics and Optical Communication, Antenna and Wave Propagation, Microwave Engineering, Satellite Communication \\
+\textbf{CGPA: 8.94 out of 10 (Best Student Award)} \hspace{0.2in}
 \hfill Advisor: Asst. Prof. Abhishek Gagneja
 
-{\bf AISSCE, CBSE Board (XII grade - Science Stream)} \hfill Apr'14 -- May'15 \\ 
-Kendriya Vidyalaya Tagore Garden, New Delhi, India\\ 
+{\bf AISSCE, CBSE Board (XII grade)} \hfill Apr'14 -- May'15 \\ 
+Kendriya Vidyalaya Tagore Garden, New Delhi, India \hfill Central Board of Secondary Education\\ 
 Subjects: Physics, Maths, Chemistry, Biology, English\\
-\textbf{Percentage}: 95\% (Gold Medalist, Positioned in top 1.5\% from 1.2million enrolments, KVS India)
+\textbf{Percentage}: 95\% (Gold Medalist, Positioned in top 1.5\% of \href{https://kvsangathan.nic.in/}{\textcolor{blue}{K.V.S., India}})
 
 \vspace{0.1in}
 \hline
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	HONORS SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\vspace{0.1in}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%HONORS AND AWARDS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{SELECTED HONORS AND AWARDS}
 
 \vspace{0.2in} 
@@ -128,8 +129,8 @@ Subjects: Physics, Maths, Chemistry, Biology, English\\
 \begin{itemize}
     \item Project Champions Award, ZS Associates, New Delhi, India \hfill 2019, 2020
     \item Best Student Award, Electronics and Communication department, BVCOE \hfill 2019
-    \item{}JK Pal Memorial- Best Student Volunteer Award, IEEE Delhi Section (R10) \hfill 2019
-    \item Paul Baran Young Scholar Celestini Prize India 2017, Team prize money: \$1500 \hfill 2017
+    \item{}JK Pal Memorial Best Student Volunteer Award, IEEE Delhi Section \hfill 2019
+    \item Paul Baran Young Scholar Celestini Prize India 2017. Awarded team prize of \$1500 \hfill 2017
     \item Runner Ups: E-yantra Robotics Competition, CSE Department, IIT Bombay \hfill 2016
 \end{itemize}
 
@@ -138,164 +139,124 @@ Subjects: Physics, Maths, Chemistry, Biology, English\\
 \hline
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	PUBLICATIONS SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%RESEARCH
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{\large RESEARCH}
 
 \vspace{\titlegap}
+\textbf{\textit{Publication - Journal Paper (In Preperation)}}\\
+\textit{Identification of Planet Candidates in Full-Frame Images from the TESS Continuous Viewing Zone}\\
+Authors: \textbf{C. Chawla}, A. Teachey \\
+To be submitted to Monthly Notices of the Royal Astronomical Society. Close to completion.
 
 \textbf{\textit{Research Proposal}}\\
-\textit{\href{https://drive.google.com/file/d/1Dy6xjWMH5EVmVreHnUj9QBFsuitt-dDZ/view?usp=sharing}{\textcolor{blue}{Exoplanet Transit Classification using Recurrent Neural Networks}}}  \hfill \textbf{C. Chawla} \\
+\textit{\href{https://drive.google.com/file/d/1Dy6xjWMH5EVmVreHnUj9QBFsuitt-dDZ/view?usp=sharing}{\textcolor{blue}{Exoplanet Transit Classification using Recurrent Neural Networks}}}\\ 
+Author: \textbf{C. Chawla} \\
 The project proposal was submitted as the final project to \href{https://github.com/howardisaacson/Intro-to-Astro-2020}{\textcolor{blue}{Intro to Astrophysics Research 2020 course}} by \href{https://hisaacson2.wixsite.com/website}{\textcolor{blue}{Howard Isaacson}}, Research Scientist, University of California, Berkeley
 
-
-\\
-\textbf{\textit{Publication - Conference Poster}}\\ \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{DRIZY: Collaborative Driver Assistance Over Wireless Networks}}}:\hspace{0.3cm} N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall\\
+\textbf{\textit{Publication - Conference Poster}}\\ \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{DRIZY: Collaborative Driver Assistance Over Wireless Networks}}} \\
+Authors: N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall\\
 ACM MobiCom 2017, Snowbird, Utah, USA
 \\Proceedings of the 23rd Annual International Conference on Mobile Computing and Networking
 
-\\
-\textbf{\textit{Publication - Conference Paper (Paper ID: 2738)}}\\ \textcolor{blue}{\textit{\href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers.html}{Aquacom: Underwater Visible Light Communication}}}:\hfill I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh\\
+\textbf{\textit{Publication - Conference Paper (Paper ID: 2738)}}\\ \textcolor{blue}{\textit{\href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers.html}{Aquacom: Underwater Visible Light Communication}}}\\
+Authors: I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh\\
 Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 
 \vspace{0.1in} 
 \hline
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	PROFESSIONAL TALKS SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \section{SCIENTIFIC TALKS}
-
-% \vspace{\titlegap}
-
-% {\bf \textit{Invited Talk}}\\
-% \textit{Not so advanced Advance Driver Assistance System}, PyData Delhi Meetup (Month  year) \\
-
-% {\bf \textit{Invited Conference Talks}}
-
-% {\bf \textit{Contributed Colloquia, Seminars, Lunch Talks}}
-
-
-% {\bf \textit{Contributed Conference Talks}}\\
-% \textit{Title}. Presented at Conference name, City, State (Month year) \\
-
-% \vspace{\sectgap} % Some whitespace between sections
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	TEACHING EXPERIENCE SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%PROJECTS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{PROJECTS}
 \vspace{0.25in}
 \begin{itemize}
-    \item
-    \href{https://github.com/chetanchawla/eYantra2018-HB}{\textcolor{blue}{Autonomous drone traversal and waypoint navigation in constrained paths}} \hfill Apr'19
-    %\vspace{-0.05in}
-    \item \textcolor{blue}{\href{https://github.com/chetanchawla/Dronalyser}{Multispectral Crop Analysis}} \hfill Mar'19
-    %\vspace{-0.05in}
-    \item
-    \textcolor{blue}{\href{https://github.com/Future-Gadgets-Lab/FOS-Fire-SOS-System}{Wildfire SOS}} and \textcolor{blue}{\href{https://github.com/chetanchawla/Future-Gadget-Labs-HINT}{evacuation assistance system}} \hfill Mar'19
-    % % \vspace{-0.05in}
-    % \item
-    % \href{https://github.com/Future-Gadgets-Lab/FOS-Fire-SOS-System}{\textcolor{blue}{FOS: Fire SOS and evacuation assistance system}} \hfill Sep'18
+    
+    \item Identifying stellar cluster memberships using Machine Learning on Gaia data \hfill In Progress
     
     \item
-    \textcolor{blue}{\href{http://people.cs.pitt.edu/~kovashka/ads/}{Video advertisements effectiveness}} : \textcolor{blue}{\href{https://github.com/chetanchawla/Audio-Analysis}{Audio module}} \hfill Apr'18
+    \href{https://github.com/sonithls/GaiaCurves}{\textcolor{blue}{GaiaCurves: An open-source package for fetching \& analyzing Gaia lightcurves}} \hfill Jun'21
+    
+    %\vspace{-0.05in}
+    \item 
+    Multispectral Crop Analysis and autonomous drone navigation [\href{https://drive.google.com/file/d/1_sTauKcEWi5l1tRGF1SYRc_7a13DjSDE/view}{\textcolor{blue}{Report}}, \href{https://github.com/chetanchawla/Dronalyser}{\textcolor{blue}{Code1}}, \href{https://github.com/chetanchawla/eYantra2018-HB}{\textcolor{blue}{Code2}}] \hfill Mar'19
+    %\vspace{-0.05in}
+    
+    \item
+    \textcolor{blue}{\href{https://github.com/Future-Gadgets-Lab/FOS-Fire-SOS-System}{Wildfire SOS}} and \textcolor{blue}{\href{https://github.com/chetanchawla/Future-Gadget-Labs-HINT}{evacuation assistance system}} \hfill Mar'19
     
     \item
     \href{https://github.com/chetanchawla/Deep-Learning-for-Music-Generation}{\textcolor{blue}{Music Generation Using Deep Learning}} \hfill Jan'18
     % \vspace{-0.05in}
     \item
-    \href{https://github.com/chetanchawla/eYantra-2016-Bothoven}{\textcolor{blue}{Synchronous path planning and coordinated task execution for Mars rovers}} \hfill Mar'17
+    \href{https://github.com/chetanchawla/eYantra-2016-Bothoven}{\textcolor{blue}{Synchronous path planning and coordinated task execution for dummy Mars rovers}} \hfill Mar'17
     % \vspace{-0.05in}
     \item
-    \href{https://github.com/chetanchawla/Blender-Models}{\textcolor{blue}{Real-time Planet terrain analyzing \& modelling simulations}}\hfill Feb'17
+    \href{https://github.com/chetanchawla/Blender-Models}{\textcolor{blue}{Emulated real-time Planet terrain analyzing \& modelling simulations}}\hfill Feb'17
 \end{itemize}
 \vspace{\sectgap} 
 \hline
 
-\section{LEADERSHIP, VOLUNTEERING \& OUTREACH}
-\vspace{0.25in}
-\begin{itemize}
-    \item Incoming Mentor at \href{https://github.com/howardisaacson/Intro-to-Astro-2021}{Intro-to-Astro 2021} summer course by Howard Isaacson, UCB \hfill 2021
-    \item Co-organizer, \href{https://pydata.org/}{\textcolor{blue}{PyData Delhi}} and marketing India head, \href{https://global.pydata.org}{\textcolor{blue}{PyData Global Conference}} \hfill 2020
-    \item Vice Chairperson, \href{https://bvpieee.com/}{\textcolor{blue}{BVP IEEE}} - lead 80 members, Chaired and Founded \href{https://innovicon.bvpieee.com}{\textcolor{blue}{Innovicon}}\\
-    Conference, All Women Hackathon \href{https://wiehack.bvpieee.com}{\textcolor{blue}{WIEHack}}, headed Eta Kappa Nu and RAS \hfill 2018-19
-    \item Instructor \& Organizer, Deep Learning workshop series, BVCOE for 60+ students \hfill 2018-19
-    
-    %\item Conference Chair, AI and Data Sceince session based conference - Innovicon
-    %\href{https://innovicon.bvpieeend.com/}{\textcolor{blue}{Innovicon}} 
-    %\hfill 2019
-    % \item Chairperson, Robotics and Automation Society, IEEE BVCOE \hfill 2017-18
-\end{itemize}
-
-
-\vspace{\sectgap} 
-\hline
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%  Advising SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{RESEARCH ADVISING}
-% \vspace{\titlegap} 
-% \textbf{Month year -- present}, Undergraduate Name (University name undergraduate), ''Title of undergraduate project''\\
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	Academic service SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{ACADEMIC SERVICE}
-% \vspace{\titlegap} 
-% \textbf{Referee}, Journal \hfill  year--present \\
-% \textbf{Panelist}, Name of panel \hfill year\\
-% \textbf{Scientific Organizing Committee Member}, Conference name \hfill year
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	OUTREACH EXPERIENCE SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{OUTREACH}
-
-% \vspace{\titlegap} 
-
-% Position that includes event name, Location \hfill Month year -- Month year
-
-% \vspace{\sectgap} 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	COMPUTER SKILLS SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%TECHNICAL SKILLS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{TECHNICAL SKILLS}
 
 \vspace{0.1in} 
 
-\textbf{Proficient}: Python, SQL, C, Unix shell scripting, \LaTeX, Embedded C/Arduino C and ROS\vspace{0.05in}\\
-\textbf{Working knowledge}: HTML, MATLAB, Lua, Tableau, C++, Android, Java
+\textbf{Proficient}: Python, SQL/ADQL, C, Unix shell scripting, \LaTeX, Git and Github, Embedded C/Arduino C and ROS\vspace{0.05in}\\
+\textbf{Working knowledge}: HTML, MATLAB, Lua, Tableau, C++, Android (XML and Java)
 \vspace{0.05in}\\
-\textbf{Libraries}: Tensorflow, Keras, OpenCV, Matplotlib, Pandas, Numpy, Radvel, LightKurve, blimpy, turboSETI, pyMC, beautifulsoup
+\textbf{Libraries}: Moonpy, Astropy, wōtan, transitleastsquares, fits, Matplotlib, Pandas, Numpy, Radvel, LightKurve, scipy, jupyter, GaiaCurves, pyMC, Tensorflow, Keras, OpenCV, beautifulsoup
 \vspace{0.05in}\\
-\textbf{Key Technologies}: \textbullet{} Astrophysics \textbullet{} Deep Learning \textbullet{} Robotics \& Networking \textbullet{} Computer Vision \textbullet{} UAV \& UGV path planning \textbullet{} Data ETL \textbullet{} RPA \textbullet{} Signal Processing \textbullet{} 3D Modelling \& Simulation
+\textbf{Key Technologies}: Astronomy, ML and Deep Learning,  Robotics \& Networking, Computer Vision, UAV \& UGV path planning, Data ETL, Signal Processing, 3D Modelling \& Simulation
 
 \vspace{0.1in}
 \hline
 
-% \vspace{\censectgap} % Some whitespace between sections
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%WORKSHOPS, CONFS, COURSES
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{RELEVANT WORKSHOPS, CONFERENCES \& COURSES ATTENDED}
+\vspace{0.25in}
+\begin{itemize}
+\item \textbf{Courses}: \textbullet{} Introduction to Astronomy Research 2020 (UC Berkeley) \textbullet{} Astronomy: Exploring Time and Space (University of Arizona - Coursera) \textbullet{} Data-Driven Astronomy (University of Sydney) \textbullet{} Code/Astro 2021 (Caltech) \textbullet{} Astrosprint 2021 Lecture Series (Maulana Azad National Urdu University, India) \textbullet{} Gravitational Wave Multi-Messenger Astronomy 2021 Lecture Series (CNRS-Institut Henri Poincaré, France), Machine Learning Course (IIT Delhi, 2018)
+\item \textbf{Workshops}: \textbullet{} ALMA Radio Interferometry Cycle 8 \textbullet{} XMM-Newton Science Workshop 2021 \textbullet{}Sagan Exoplanet Summer Workshop on Circumstellar Disks \& Young Planets (NExSCI, 2021)
+\item \textbf{Conferences}: \textbullet{} Extragalactic Spectroscopic Surveys, GALSPEC 2021 \textbullet{} Gravitational Wave Multi-Messenger Astronomy 2021 \textbullet{} Cool Stars 20.5 \textbullet{} Emerging Researchers in Exoplanet Science, ERES 2021 \textbullet{} Spatially Resolved Spectroscopy with ELT (Oxford, 2021)
+\item \textbf{Symposia}:  \textbullet{} STScI Spring Symposium 2021 \textbullet{} Stars and Planets in the UV, SPUV 2021
+\end{itemize}
+\vspace{\sectgap} 
+\hline
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%OUTREACH
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	References SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{LEADERSHIP, VOLUNTEERING \& OUTREACH}
+\vspace{0.25in}
+\begin{itemize}
+    \item Course Mentor at \href{https://github.com/howardisaacson/Intro-to-Astro-2021}{\textcolor{blue}{Intro-to-Astro 2021}} summer course by Howard Isaacson, Research \\ Scientist at UC-Berkeley and Dr. Fei Dai, Postdoctoral fellow at Caltech \hfill 2021
+    \item Course Mentor at \href{https://www.astrosprint2021.com/}{\textcolor{blue}{Astrosprint 2021}} Astronomy and Astrophysics course led \\
+    by Dr. Priya Hasan and Dr. S.N. Hasan (Delivered session on Git/GitHub) \hfill 2021
+    \item Co-organizer at \href{https://numfocus.org/}{\textcolor{blue}{NumFocus}}: \href{https://pydata.org/}{\textcolor{blue}{PyData Delhi}}, Core team member, \href{https://global.pydata.org}{\textcolor{blue}{PyData Global}} \hfill 2020, 2021
+    \item Mentor at \href{https://hackthenorth.com/}{\textcolor{blue}{HackTheNorth}} (University of Waterloo, Canada), \href{https://wiehack.bvpieee.com/}{\textcolor{blue}{WIEHack 3.0}}, etc \hfill 2020, 2021
+    \item Delivered Machine and Deep Learning workshop series, BVCOE for 60+ students \hfill 2018-19
+    \item Vice Chairperson, \href{https://bvpieee.com/}{\textcolor{blue}{BVP IEEE}} - Delivered \gt 30 talks \& hands-on sessions, Chaired \\ and Founded \href{https://innovicon.bvpieee.com}{\textcolor{blue}{Innovicon}} Conference, All Women Hackathon \href{https://wiehack.bvpieee.com}{\textcolor{blue}{WIEHack}}, headed \\ Eta Kappa Nu and RAS \hfill 2017-19
+    
+\end{itemize}
 
-%\section{REFERENCES}
+
+\vspace{\sectgap} 
+\hline
+
 
 %\vspace{\titlegap} 
 
