--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
-\usepackage[margin=0.94in, top=0.6in, bottom=0.9in]{geometry}
+\usepackage[margin=0.94in, top=0.6in, bottom=1in]{geometry}
 
 
 \begin{document}
@@ -42,59 +42,23 @@
 
 \centerline{\bf \huge CHETAN CHAWLA}
 \vspace{-0.3cm}
-\address{ \noindent\rule{8.5cm}{0.8pt} \\ New Delhi, India\\
+\address{
+\vspace{0.2cm}
+\noindent\rule{8.5cm}{0.8pt}\\
+New Delhi, India\\
 Phone: (+91) 90133 07073 \\  \noindent\rule{8.5cm}{0.8pt}} 
 
 \address{\noindent\rule{8.5cm}{0.8pt} 
+\vspace{0.2cm}
 \\ Website: \href{https://sites.google.com/view/chetanchawla}{\textcolor{blue}{sites.google.com/view/chetanchawla}}
-\\ Email: \href{mailto:chetanchawlacc4@gmail.com}{\textcolor{blue}{chetanchawlacc4@gmail.com}}
-\\\noindent\rule{8.5cm}{0.8pt}}
+\\ Email: \href{mailto:chetanchawlacc4@gmail.com}{\textcolor{blue}{chetanchawlacc4@gmail.com}}\\
+\noindent\rule{8.5cm}{0.8pt}}
 
 
 
 \begin{resume}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%POSITIONS AND EXPERIENCE
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \vspace{-0.2cm}
-\section{POSITIONS}
-\vspace{\titlegap}
-
-
-{\bf \href{https://events.asiaa.sinica.edu.tw/ssp/2021/}{\textcolor{blue}{Academia Sinica Institute of Astronomy and Astrophysics}},} Taipei, Taiwan (Remote)\\
-Research Intern, Jul'21 -- Present \hfill Supervisor: \href{https://alexteachey.wordpress.com/}{\textcolor{blue}{Dr. Alex Teachey}}, Distinguished Postdoc Fellow
-\begin{itemize}
- \item Working on detection pipeline for temperate exoplanet candidates using \textit{a priori} grid based kernels for detrending and transit searches on Transiting Exoplanet Survey Satellite's (TESS) Continuous Viewing Zones data. Test case recovery of 18/20 Kepler and 17/20 TESS planets with orbital periods ranging from 0.4 to 332 days
- 
-\end{itemize}
-
-\vspace{-0.1cm}
-{\bf \href{https://www.zs.com/}{\textcolor{blue}{ZS Associates}},} New Delhi, India\\
-Business Technology Analyst, Jun'19 -- Jan'21 \hfill Incentive Compensation Team: Data Analysis
-\begin{itemize}
-    \item Development, Testing \& Deployment of 1-click end-to-end systems for sales alignment of US-based medical representatives using SQL, Unix and python scripting, and Tableau dashboards
-    \item Automated several high-impact modules like textual insights generation, data inflow, migration \& processing, and automatic backup-deletion
-\end{itemize}
-
-\vspace{-0.1cm}
-{\bf \href{https://home.iitd.ac.in/}{\textcolor{blue}{Indian Insitute of Technology, Delhi, India}}} - Electrical \& Electronics Dept\\
-Research Intern, Jun'18 – Aug'18 \hfill Mentor: \href{https://web.iitd.ac.in/~brejesh/index.html}{\textcolor{blue}{Prof. Brejesh Lall}} (Electrical \& Electronics Dept)
-\begin{itemize}
-    \item Worked on pedestrian trajectory prediction, optimizing multi-object tracking, and benchmarking indigenous Indian road dataset with $>$50,000 frames for vehicle-dashboard cameras \textcolor{blue}{\href{https://drive.google.com/file/d/1VzW1S9UInuxXegAi2ursUIjQHOWDsS6R/view?usp=sharing}{[Report]}}
-\end{itemize} 
-
-\vspace{-0.1cm}
-\href{https://www.marconisociety.org/programs-services/}{\textbf{\textcolor{blue}{Celestini Project India}}}, Marconi Society \& IIT Delhi, India\\
-Summer Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github.io/achowdhery-website/index.html}{\textcolor{blue}{Dr.Aakanksha Chowdhery}} (Google Brain, Princeton)
-\begin{itemize}
-\item Prototyped test-bed for a low latency collaborative driver assistance system to prevent vehicle-to-vehicle and vehicle-to-pedestrian collisions using real-time networking of sensory data. \textcolor{blue}{\href{https://bhartischool.iitd.ac.in/pdf/7thISSUEnewsletter.pdf}{[Link]}}
-\end{itemize}
-
-
-\vspace{\sectgap}
-\hline
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %EDUCATION
@@ -105,15 +69,66 @@ Summer Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github.
 \vspace{\titlegap}
 
 {\bf Bachelor of Technology, Electronics and Communication Engineering} \hfill Aug'15 -- May'19 \\ 
-\href{http://www.ipu.ac.in/}{\textcolor{blue}{Guru Gobind Singh Indraprastha University}}, \href{http://bvcoend.ac.in}{\textcolor{blue}{Bharati Vidyapeeth's College Of Engg., New Delhi}}\\
-\textbf{Notable Coursework}: Applied Physics (I \& II), Applied Mathematics (I, II, III, \& IV), Electromagnetic Field Theory, Signals and Systems, Digital Signal Processing, Optoelectronics and Optical Communication, Antenna and Wave Propagation, Microwave Engineering, Satellite Communication \\
-\textbf{CGPA: 8.94 out of 10 (Best Student Award)} \hspace{0.2in}
-\hfill Advisor: Asst. Prof. Abhishek Gagneja
+\textbf{University}: \href{http://www.ipu.ac.in/}{\textcolor{blue}{Guru Gobind Singh Indraprastha University, Delhi, India}}\\
+\textbf{Institute}: \href{http://bvcoend.ac.in}{\textcolor{blue}{Bharati Vidyapeeth's College Of Engineering, New Delhi}}\\
+\textbf{Projects Advisor}: Abhishek Gagneja (Assistant Professor)\\
+% \textbf{Notable Coursework}: Applied Physics (I \& II), Applied Mathematics (I, II, III, \& IV), Electromagnetic Field Theory, Signals and Systems, Digital Signal Processing, Optoelectronics and Optical Communication, Antenna and Wave Propagation, Microwave Engineering, Satellite Communication \\
+\textbf{CGPA: 8.94 out of 10 (Top scores in class, Best Student Award by department)}
 
-{\bf AISSCE, CBSE Board (XII grade)} \hfill Apr'14 -- May'15 \\ 
-Kendriya Vidyalaya Tagore Garden, New Delhi, India \hfill Central Board of Secondary Education\\ 
-Subjects: Physics, Maths, Chemistry, Biology, English\\
-\textbf{Percentage}: 95\% (Gold Medalist, Positioned in top 1.5\% of \href{https://kvsangathan.nic.in/}{\textcolor{blue}{K.V.S., India}})
+{\bf AISSCE, Central Board of Secondary Education (XII grade)} \hfill Apr'14 -- May'15 \\ 
+\textbf{School}: Kendriya Vidyalaya Tagore Garden, New Delhi, India\\
+\textbf{Subjects}: Physics, Maths, Chemistry, Biology, English\\
+\textbf{Percentage}: 95\% (Top scores in class, top 1.5\% \href{https://kvsangathan.nic.in/}{\textcolor{blue}{KVS India}}, appreciated by MHRD - Govt.\ of India)
+
+\vspace{0.1in}
+\hline
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%POSITIONS AND EXPERIENCE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\section{POSITIONS}
+\vspace{\titlegap}
+
+
+{\bf \href{https://events.asiaa.sinica.edu.tw/ssp/2021/}{\textcolor{blue}{Academia Sinica Institute of Astronomy and Astrophysics}},} Taipei, Taiwan (Remote)\\
+\textbf{Research Intern, Jul'21 -- Present}\\
+\textbf{Supervisor}: \href{https://alexteachey.wordpress.com/}{\textcolor{blue}{Dr.~Alex Teachey}} (Distinguished Postdoctoral Fellow)
+\vspace{0.1cm}
+\begin{itemize}
+ \item Working on detection pipeline for identifying planet candidates in Transiting Exoplanet Survey Satellite's (TESS) Continuous Viewing Zones data. Achieved $\sim$ 93\% recovery rate on  test-set of published planets having orbital periods ranging from $\sim$ 0.5 to 300 days. \hfill \href{https://youtu.be/sT8yIwQLXuc}{\textcolor{blue}{[Talk]}}
+ 
+\end{itemize}
+
+\vspace{-0.1cm}
+{\bf \href{https://www.zs.com/}{\textcolor{blue}{ZS Associates}},} New Delhi, India\\
+\textbf{Business Technology Analyst, Jun'19 -- Jan'21}\\
+\textbf{Team}: Data Analysis in Incentive Compensation Client Team
+\vspace{0.1cm}
+\begin{itemize}
+    \item Development and deployment of 1-click end-to-end systems for sales alignment of US medical representatives using SQL, Unix, Python, and Tableau. Automated high-impact modules like textual insights generation, data orchestration and processing, and automatic backup-deletion.
+\end{itemize}
+
+\vspace{-0.1cm}
+{\bf \href{https://home.iitd.ac.in/}{\textcolor{blue}{Indian Institute of Technology, Delhi, India}}} - Electrical \& Electronics Department\\
+\textbf{Research Intern, Jun'18 – Jul'18}\\
+\textbf{Supervisor}: \href{https://web.iitd.ac.in/~brejesh/index.html}{\textcolor{blue}{Prof.~Brejesh Lall}} (Electrical \& Electronics Department, Head of Bharti Labs)
+\vspace{0.1cm}
+\begin{itemize}
+    \item Surveyed \& implemented pedestrian trajectory prediction, benchmarked multi-object tracking algorithms, and curated Indian road dataset using vehicle-dashboard cameras. \hfill \textcolor{blue}{\href{https://drive.google.com/file/d/1VzW1S9UInuxXegAi2ursUIjQHOWDsS6R/view?usp=sharing}{[Report]}}
+\end{itemize} 
+
+\vspace{-0.1cm}
+\href{https://www.marconisociety.org/programs-services/celestini-program/}{\textbf{\textcolor{blue}{Celestini Project India}}}, Marconi Society \& IIT Delhi, India\\
+\textbf{Research Intern, Jun'17 – Jul'17}\\
+\textbf{Supervisor}: \href{https://achowdhery.github.io/achowdhery-website/index.html}{\textcolor{blue}{Dr.~Aakanksha Chowdhery}} (Google Brain, Princeton)
+\vspace{0.1cm}
+\begin{itemize}
+\item Prototyped \& tested a low-latency collaborative driver assistance system to prevent vehicle-to-vehicle and vehicle-to-pedestrian collisions using real-time networking of sensory data. \textcolor{blue}{\href{https://youtu.be/T_6gfR0uh_0}{[Video]}}
+\end{itemize}
+
 
 \vspace{0.1in}
 \hline
@@ -127,14 +142,13 @@ Subjects: Physics, Maths, Chemistry, Biology, English\\
 \vspace{0.2in} 
 
 \begin{itemize}
-    \item Project Champions Award, ZS Associates, New Delhi, India \hfill 2019, 2020
-    \item Best Student Award, Electronics and Communication department, BVCOE \hfill 2019
-    \item{}JK Pal Memorial Best Student Volunteer Award, IEEE Delhi Section \hfill 2019
-    \item Paul Baran Young Scholar Celestini Prize India 2017. Awarded team prize of \$1500 \hfill 2017
+    \item Project Champions award, ZS Associates, New Delhi, India \hfill 2019, 2020
+    \item{}J.K. Pal Memorial: Best Student Volunteer Award, IEEE Delhi Section \hfill 2019
+    \item Paul Baran Young Scholar Celestini Prize India 2017. Team Award: \$1500 \href{https://bhartischool.iitd.ac.in/pdf/7thISSUEnewsletter.pdf}{\textcolor{blue}{[Page 4]}} \hfill 2017
     \item Runner Ups: E-yantra Robotics Competition, CSE Department, IIT Bombay \hfill 2016
 \end{itemize}
 
-\vspace{\sectgap} 
+\vspace{0.1in}
 
 \hline
 
@@ -143,28 +157,23 @@ Subjects: Physics, Maths, Chemistry, Biology, English\\
 %RESEARCH
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{\large RESEARCH}
+\section{\large PUBLICATIONS}
 
 \vspace{\titlegap}
-\textbf{\textit{Publication - Journal Paper (In Preperation)}}\\
-\textit{Identification of Planet Candidates in Full-Frame Images from the TESS Continuous Viewing Zone}\\
-Authors: \textbf{C. Chawla}, A. Teachey \\
-To be submitted to Monthly Notices of the Royal Astronomical Society. Close to completion.
 
-\textbf{\textit{Research Proposal}}\\
-\textit{\href{https://drive.google.com/file/d/1Dy6xjWMH5EVmVreHnUj9QBFsuitt-dDZ/view?usp=sharing}{\textcolor{blue}{Exoplanet Transit Classification using Recurrent Neural Networks}}}\\ 
-Author: \textbf{C. Chawla} \\
-The project proposal was submitted as the final project to \href{https://github.com/howardisaacson/Intro-to-Astro-2020}{\textcolor{blue}{Intro to Astrophysics Research 2020 course}} by \href{https://hisaacson2.wixsite.com/website}{\textcolor{blue}{Howard Isaacson}}, Research Scientist, University of California, Berkeley
 
-\textbf{\textit{Publication - Conference Poster}}\\ \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{DRIZY: Collaborative Driver Assistance Over Wireless Networks}}} \\
-Authors: N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall\\
-ACM MobiCom 2017, Snowbird, Utah, USA
-\\Proceedings of the 23rd Annual International Conference on Mobile Computing and Networking
+\textbullet{} \textbf{\textit{Journal Paper (In Preparation)}}\\
+\textbf{C. Chawla} and A. Teachey - \textit{Identification of Planet Candidates in Full-Frame Images from the TESS Continuous Viewing Zone}\\
+To be submitted to Monthly Notices of the Royal Astronomical Society.
 
-\textbf{\textit{Publication - Conference Paper (Paper ID: 2738)}}\\ \textcolor{blue}{\textit{\href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers.html}{Aquacom: Underwater Visible Light Communication}}}\\
-Authors: I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh\\
-Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
+\textbullet{} \textbf{\textit{Conference Poster Paper}}\\ 
+N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall - \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{Poster: DRIZY: Collaborative Driver Assistance Over Wireless Networks}}}\\
+In Proceedings of the 23rd Annual International Conference on Mobile Computing and Networking (MobiCom '17). Association for Computing Machinery, New York, NY, USA, 546–548.\\
+\textbf{DOI}: https://doi.org/10.1145/3117811.3131255 \hfill \href{https://drive.google.com/file/d/1SKX32RrcdYj5FT_NZexk6U-bRMg0f61e/view}{\textcolor{blue}{[pdf]}} \href{https://drive.google.com/file/d/1KqTpAvrwtumLvsuGCr1nNg1oRxdMLvOv/view}{\textcolor{blue}{[poster]}}
 
+\textbullet{} \textbf{\textit{Conference Paper (Paper ID: 2738)}}\\ 
+I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh - \textcolor{blue}{\textit{\href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers.html}{Aquacom: Underwater Visible Light Communication}}}\\
+Proceedings of the 12th INDIACom; INDIACom-2018; IEEE Conference ID: 42835 \hfill \href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers/2738.pdf}{\textcolor{blue}{[pdf]}}
 \vspace{0.1in} 
 \hline
 
@@ -177,29 +186,77 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 \vspace{0.25in}
 \begin{itemize}
     
-    \item Identifying stellar cluster memberships using Machine Learning on Gaia data \hfill In Progress
+    \item Identifying stellar cluster memberships using Gaia \hfill In Progress
     
     \item
     \href{https://github.com/sonithls/GaiaCurves}{\textcolor{blue}{GaiaCurves: An open-source package for fetching \& analyzing Gaia lightcurves}} \hfill Jun'21
     
+    \item
+    Intro2Astro Proposal: \href{https://drive.google.com/file/d/1Dy6xjWMH5EVmVreHnUj9QBFsuitt-dDZ/view?usp=sharing}{\textcolor{blue}{Exoplanet Transit Classification using Recurrent Neural Nets}} \hfill Jun'20
+    
     %\vspace{-0.05in}
     \item 
-    Multispectral Crop Analysis and autonomous drone navigation [\href{https://drive.google.com/file/d/1_sTauKcEWi5l1tRGF1SYRc_7a13DjSDE/view}{\textcolor{blue}{Report}}, \href{https://github.com/chetanchawla/Dronalyser}{\textcolor{blue}{Code1}}, \href{https://github.com/chetanchawla/eYantra2018-HB}{\textcolor{blue}{Code2}}] \hfill Mar'19
+    Multispectral crop analysis and drone navigation [\href{https://drive.google.com/file/d/1_sTauKcEWi5l1tRGF1SYRc_7a13DjSDE/view}{\textcolor{blue}{Report}}, \href{https://github.com/chetanchawla/Dronalyser}{\textcolor{blue}{Code1}}, \href{https://github.com/chetanchawla/eYantra2018-HB}{\textcolor{blue}{Code2}}] \hfill Mar'19
     %\vspace{-0.05in}
     
-    \item
-    \textcolor{blue}{\href{https://github.com/Future-Gadgets-Lab/FOS-Fire-SOS-System}{Wildfire SOS}} and \textcolor{blue}{\href{https://github.com/chetanchawla/Future-Gadget-Labs-HINT}{evacuation assistance system}} \hfill Mar'19
+    % \item
+    % \textcolor{blue}{\href{https://github.com/Future-Gadgets-Lab/FOS-Fire-SOS-System}{Wildfire SOS}} and \textcolor{blue}{\href{https://github.com/chetanchawla/Future-Gadget-Labs-HINT}{evacuation assistance system}} \hfill Mar'19
     
-    \item
-    \href{https://github.com/chetanchawla/Deep-Learning-for-Music-Generation}{\textcolor{blue}{Music Generation Using Deep Learning}} \hfill Jan'18
+    % \item
+    % \href{https://github.com/chetanchawla/Deep-Learning-for-Music-Generation}{\textcolor{blue}{Music generation using Deep Learning}} \hfill Jan'18
     % \vspace{-0.05in}
     \item
     \href{https://github.com/chetanchawla/eYantra-2016-Bothoven}{\textcolor{blue}{Synchronous path planning and coordinated task execution for dummy Mars rovers}} \hfill Mar'17
     % \vspace{-0.05in}
-    \item
-    \href{https://github.com/chetanchawla/Blender-Models}{\textcolor{blue}{Emulated real-time Planet terrain analyzing \& modelling simulations}}\hfill Feb'17
+    % \item
+    % \href{https://github.com/chetanchawla/Blender-Models}{\textcolor{blue}{Emulated real-time Planet terrain analyzing \& modelling simulations}}\hfill Feb'17
 \end{itemize}
-\vspace{\sectgap} 
+\vspace{0.1in}
+\hline
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%WORKSHOPS, CONFS, COURSES
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{COURSES, WORKSHOPS, and CONFERENCES}
+\vspace{0.25in}
+\begin{itemize}
+\item \textbf{Relevant Undergraduate Courses}: \textbullet{} Applied Physics (I \& II) \textbullet{} Applied Mathematics (I, II, III, \& IV) \textbullet{} Electromagnetic Field Theory \textbullet{} Digital Signal Processing \textbullet{} Introduction to Programming \textbullet{} Optoelectronics and Optical Communication \textbullet{} Analog Electronics (I \& II)
+
+
+\item \textbf{Post-baccalaureate Courses}: \textbullet{} \href{https://github.com/howardisaacson/Intro-to-Astro-2020}{\textcolor{blue}{Introduction to Astronomy Research 2020}} \textbullet{} \href{https://www.coursera.org/learn/astro}{\textcolor{blue}{Astronomy: Exploring Time and Space (University of Arizona - Coursera)}} \textbullet{} \href{https://www.coursera.org/learn/data-driven-astronomy}{\textcolor{blue}{Data-Driven Astronomy (University of Sydney - Coursera)}} \textbullet{} \href{https://semaphorep.github.io/codeastro/}{\textcolor{blue}{Code/Astro 2021 (Caltech)}} \textbullet{} \href{https://www.astrosprint2021.com/}{\textcolor{blue}{Astrosprint 2021 (MANUU, India)}}
+
+\item \textbf{Workshops}: \textbullet{} Sagan Exoplanet Summer Workshop on Circumstellar Disks \& Young Planets (NExSCI, 2021) \textbullet{} XMM-Newton Science Workshop, 2021 \textbullet{} ALMA Radio Interferometry Cycle8
+
+\item \textbf{Conferences Attended}: \textbullet{} TESS Science Conference II 2021 \textbullet{} PLATO Mission Conference 2021 \textbullet{} Spatially Resolved Spectroscopy with ELT 2021 (Oxford) \textbullet{} Emerging Researchers in Exoplanet Science, ERES 2021 \textbullet{} Extragalactic Spectroscopic Surveys, GALSPEC 2021 \textbullet{} Cool Stars 20.5 \textbullet{} Gravitational Wave Multi-Messenger Astronomy 2021 (CNRS, France)
+
+\item \textbf{Symposia}: \textbullet{} STScI Spring Symposium 2021 \textbullet{} Stars and Planets in the UV, SPUV 2021
+\end{itemize}
+\vspace{0.1in}
+\hline
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%OUTREACH
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{VOLUNTEERING \& OUTREACH}
+\vspace{0.15in}
+\begin{table}[h]
+\begin{tabular}{p{0.8in} p{5.5in}}
+    2021 & Mentor at \href{https://github.com/howardisaacson/Intro-to-Astro-2021}{\textcolor{blue}{Intro-to-Astro 2021}} summer course by \textcolor{blue}{\href{https://astro.berkeley.edu/people/howard-isaacson/}{Howard Isaacson}}, Research Scientist at UC-Berkeley and \textcolor{blue}{\href{https://sites.astro.caltech.edu/~fdai/}{Dr. Fei Dai}}, Postdoctoral fellow at Caltech \\
+    
+    2021 & Mentor at \href{https://www.astrosprint2021.com/}{\textcolor{blue}{Astrosprint 2021}} Astronomy and Astrophysics course led
+    by Prof. Priya Hasan and Prof. S.N. Hasan (Delivered session on Git/GitHub) \\
+    
+    2020, 2021 & Co-organizer at \href{https://numfocus.org/}{\textcolor{blue}{NumFocus}}: \href{https://pydata.org/}{\textcolor{blue}{PyData Delhi}}, Core team member, \href{https://global.pydata.org}{\textcolor{blue}{PyData Global}} \\
+    
+    2019 & Delivered Machine and Deep Learning workshop series at BVCOE for 60+ students\\
+    
+    2017-2019 & Vice Chairperson, \href{https://bvpieee.com/}{\textcolor{blue}{BVP IEEE}} Technical Society - Delivered several talks \& hands-on sessions, Chaired and Founded \href{https://innovicon.bvpieee.com}{\textcolor{blue}{Innovicon}} Conference and All-Women Hackathon \href{https://wiehack.bvpieee.com}{\textcolor{blue}{WIEHack}}, headed Eta Kappa Nu and Robotics and Automation Society
+\end{tabular}
+\end{table}
+\vspace{0.1in}
 \hline
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -210,51 +267,15 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 
 \vspace{0.1in} 
 
-\textbf{Proficient}: Python, SQL/ADQL, C, Unix shell scripting, \LaTeX, Git and Github, Embedded C/Arduino C and ROS\vspace{0.05in}\\
+\textbf{Proficient}: Python, SQL/ADQL, C, Unix Shell Scripting, \LaTeX, Git, Topcat
+\vspace{0.05in}\\
 \textbf{Working knowledge}: HTML, MATLAB, Lua, Tableau, C++, Android (XML and Java)
 \vspace{0.05in}\\
-\textbf{Libraries}: Moonpy, Astropy, wōtan, transitleastsquares, fits, Matplotlib, Pandas, Numpy, Radvel, LightKurve, scipy, jupyter, GaiaCurves, pyMC, Tensorflow, Keras, OpenCV, beautifulsoup
+\textbf{Python Libraries}: \textsc{MoonPy}, \textsc{astropy}, \textsc{wōtan}, \textsc{transitleastsquares}, \textsc{matplotlib}, \textsc{pandas}, \textsc{numpy}, \textsc{radvel}, \textsc{lightkurve}, \textsc{scipy}, \textsc{jupyter}, \textsc{pyMC}, \textsc{tensorflow}, \textsc{keras}, \textsc{openCV}
 \vspace{0.05in}\\
-\textbf{Key Technologies}: Astronomy, ML and Deep Learning,  Robotics \& Networking, Computer Vision, UAV \& UGV path planning, Data ETL, Signal Processing, 3D Modelling \& Simulation
+\textbf{Key Technologies}: Astronomy, Machine Learning,  Data Analysis, Signal Processing, Robotics
 
 \vspace{0.1in}
-\hline
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%WORKSHOPS, CONFS, COURSES
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{RELEVANT WORKSHOPS, CONFERENCES \& COURSES ATTENDED}
-\vspace{0.25in}
-\begin{itemize}
-\item \textbf{Courses}: \textbullet{} Introduction to Astronomy Research 2020 (UC Berkeley) \textbullet{} Astronomy: Exploring Time and Space (University of Arizona - Coursera) \textbullet{} Data-Driven Astronomy (University of Sydney) \textbullet{} Code/Astro 2021 (Caltech) \textbullet{} Astrosprint 2021 Lecture Series (Maulana Azad National Urdu University, India) \textbullet{} Gravitational Wave Multi-Messenger Astronomy 2021 Lecture Series (CNRS-Institut Henri Poincaré, France), Machine Learning Course (IIT Delhi, 2018)
-\item \textbf{Workshops}: \textbullet{} ALMA Radio Interferometry Cycle 8 \textbullet{} XMM-Newton Science Workshop 2021 \textbullet{}Sagan Exoplanet Summer Workshop on Circumstellar Disks \& Young Planets (NExSCI, 2021)
-\item \textbf{Conferences}: \textbullet{} Extragalactic Spectroscopic Surveys, GALSPEC 2021 \textbullet{} Gravitational Wave Multi-Messenger Astronomy 2021 \textbullet{} Cool Stars 20.5 \textbullet{} Emerging Researchers in Exoplanet Science, ERES 2021 \textbullet{} Spatially Resolved Spectroscopy with ELT (Oxford, 2021)
-\item \textbf{Symposia}:  \textbullet{} STScI Spring Symposium 2021 \textbullet{} Stars and Planets in the UV, SPUV 2021
-\end{itemize}
-\vspace{\sectgap} 
-\hline
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%OUTREACH
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{LEADERSHIP, VOLUNTEERING \& OUTREACH}
-\vspace{0.25in}
-\begin{itemize}
-    \item Course Mentor at \href{https://github.com/howardisaacson/Intro-to-Astro-2021}{\textcolor{blue}{Intro-to-Astro 2021}} summer course by Howard Isaacson, Research \\ Scientist at UC-Berkeley and Dr. Fei Dai, Postdoctoral fellow at Caltech \hfill 2021
-    \item Course Mentor at \href{https://www.astrosprint2021.com/}{\textcolor{blue}{Astrosprint 2021}} Astronomy and Astrophysics course led \\
-    by Dr. Priya Hasan and Dr. S.N. Hasan (Delivered session on Git/GitHub) \hfill 2021
-    \item Co-organizer at \href{https://numfocus.org/}{\textcolor{blue}{NumFocus}}: \href{https://pydata.org/}{\textcolor{blue}{PyData Delhi}}, Core team member, \href{https://global.pydata.org}{\textcolor{blue}{PyData Global}} \hfill 2020, 2021
-    \item Mentor at \href{https://hackthenorth.com/}{\textcolor{blue}{HackTheNorth}} (University of Waterloo, Canada), \href{https://wiehack.bvpieee.com/}{\textcolor{blue}{WIEHack 3.0}}, etc \hfill 2020, 2021
-    \item Delivered Machine and Deep Learning workshop series, BVCOE for 60+ students \hfill 2018-19
-    \item Vice Chairperson, \href{https://bvpieee.com/}{\textcolor{blue}{BVP IEEE}} - Delivered \gt 30 talks \& hands-on sessions, Chaired \\ and Founded \href{https://innovicon.bvpieee.com}{\textcolor{blue}{Innovicon}} Conference, All Women Hackathon \href{https://wiehack.bvpieee.com}{\textcolor{blue}{WIEHack}}, headed \\ Eta Kappa Nu and RAS \hfill 2017-19
-    
-\end{itemize}
-
-
-\vspace{\sectgap} 
 \hline
 
 
